Instead of max-width, set legend width @ 400px to accommodate longer agency labels and stop the resizing which messes with the width/margin of the chart. Remove padding except for the top so legend remains aligned with chart at the top, but accommodates width of chart better. Experimented with y-axis labels - data for FY25 *is* showing up now, but FY25 label gets cut off because of font-size. Visible @ 10px, but 10px is noticeably too small. Current/default setting is 11px. Removed unnecessary root width setting in CSS.

--- a/fed-budget-chart/css/lines.css
+++ b/fed-budget-chart/css/lines.css
@@ -24,10 +24,6 @@ p + p {
   margin: 0 auto;
 }
 
-.highcharts-root {
-  max-width: 1200px;
-}
-
 @media screen and (min-width: 48em) {
   #outerContainer {
     grid-template-columns: 2fr auto;
@@ -112,8 +108,8 @@ h1 {
   #legend {
     position: relative;
     display: block;
-    max-width: 400px;
-    padding: 16px;
+    width: 400px;
+    padding-top: 16px;
     height: 341px;
     font-family: "Source Sans Pro", sans-serif;
     font-size: 14px;
